# assessment

./: README.md  RUN.md  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/flmap/: CameraHandler.kt  GLRenderer.kt  MainActivity.kt  NativeBridge.kt
gl/shaders/: fragment_shader.glsl  vertex_shader.glsl
gl/src/main/java/com/flmap/: GLRenderer.kt  MyGLSurfaceView.kt  TextureUtils.kt
jni/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  native-lib.cpp
web/: index.html  main.js  main.ts  server.py  start.bat  start.sh  style.css
